# reflang

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md  main.cpp
.github/workflows/: ci.yaml
cmake/: runtest.cmake
examples/: input-enum.cpp  output-enum.cpp
lib/: README.md  reflang.cpp  reflang.hpp
tests/: CMakeLists.txt
tests/class/: CMakeLists.txt  fields.gen.cpp  fields.gen.hpp  fields.src.hpp  fields.test.cpp  members.gen.hpp  members.src.hpp  members.test.cpp  methods.gen.cpp  methods.gen.hpp  methods.src.hpp  methods.test.cpp  static-fields.gen.cpp  static-fields.gen.hpp  static-fields.src.hpp  static-fields.test.cpp  static-methods.gen.cpp  static-methods.gen.hpp  static-methods.src.hpp  static-methods.test.cpp  subclass.gen.cpp  subclass.gen.hpp  subclass.src.hpp  subclass.test.cpp
tests/enum/: CMakeLists.txt  c-enum.gen.cpp  c-enum.gen.hpp  c-enum.src.hpp  c-enum.test.cpp  cpp11-enum.gen.cpp  cpp11-enum.gen.hpp  cpp11-enum.src.hpp  cpp11-enum.test.cpp  empty-enum.gen.cpp  empty-enum.gen.hpp  empty-enum.src.hpp  empty-enum.test.cpp
tests/function/: CMakeLists.txt  args.gen.cpp  args.gen.hpp  args.src.hpp  args.test.cpp  overload.gen.cpp  overload.gen.hpp  overload.src.hpp  overload.test.cpp  return-noargs.gen.cpp  return-noargs.gen.hpp  return-noargs.src.hpp  return-noargs.test.cpp  void-noargs.gen.cpp  void-noargs.gen.hpp  void-noargs.src.hpp  void-noargs.test.cpp
tests/lib/: CMakeLists.txt  object.test.cpp  reference.test.cpp
